kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackathon-1124-ngnx
  labels:
    app: hackathon-1124-ngnx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hackathon-1124-ngnx
  template:
    metadata:
      labels:
        app: hackathon-1124-ngnx
    spec:
      containers:
      - name: hackathon-1124-ngnx
        image: abdulkyndryl/team-18-kc-hackathon:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            memory: 400Mi
