kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hackathon-1124-ngnx
spec:
  selector:
    app: hackathon-1124-ngnx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
